# The_smart_analyst-Hyena

./: .env.example  Makefile  docker-compose.yml  main.py  pyproject.toml  test1_sheet_0.md  vnm_parsed.md  vnm_parsed_4.md  vnm_parsed_6.md
Docs/: test_1.xlsx
backend/: Dockerfile  requirements.txt
backend/app/: config.py  main.py
backend/app/api/v1/: documents.py  health.py  query.py  router.py
backend/app/core/generation/: context_builder.py  query_analyzer.py  rag_engine.py
backend/app/core/ingestion/: image_processor.py  pipeline.py  table_processor.py  text_processor.py
backend/app/core/retrieval/: embedder.py  qdrant_client.py  retriever.py
backend/app/models/: chunk.py  document.py  query.py
backend/app/workers/: celery_app.py  tasks.py
frontend/: Dockerfile  index.html  nginx.conf
frontend/css/: components.css  style.css
frontend/js/: api.js  app.js  chat.js  upload.js  utils.js
research/: Qdrant research 30d80a5968b380509016f30bf873c8dc.md  ingestion.py  test_llamaparse.py  test_sherpa.py
scripts/: init_collections.py  test_ingestion.py  test_query.py
