[project]
name = "hyena"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index-core==0.11.0",
    "llama-index-embeddings-openai>=0.2.0",
    "llama-index-llms-openai>=0.2.0",
    "llama-parse==0.5.0",
    "llmsherpa>=0.1.4",
    "python-dotenv>=1.2.1",
    "openai>=1.0.0",
]
